--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "directories": {
       "lib": ".",
       "packages": "jspm_packages"
+    },
+    "dependencies": {
+      "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
   }
 }
