--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "dependencies": {
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0"
   }
 }
