--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "packages": "jspm_packages"
     },
     "dependencies": {
+      "angular/angular": "github:angular/angular@master",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
   },
