--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
       "angular/angular": "github:angular/angular@master",
+      "angular/zone.js": "github:angular/zone.js@^0.4.1",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
   },
