--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0"
+    "gulp-connect": "^2.2.0",
+    "systemjs-builder": "git://github.com/systemjs/builder"
   }
 }
