--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "ng2chat",
   "jspm": {
     "directories": {
       "lib": ".",
       "packages": "jspm_packages"
     },
     "dependencies": {
-      "angular/angular": "github:angular/angular@master",
-      "angular/zone.js": "github:angular/zone.js@^0.4.1",
+      "angular/angular": "github:angular/angular@2.0.0-alpha.15",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
-  },
-  "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0"
   }
 }
