--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
       "angular/angular": "github:angular/angular@2.0.0-alpha.15",
+      "angular/zone.js": "github:angular/zone.js@^0.4.1",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     }
   }
