--- a/package.json
+++ b/package.json
@@ -1,13 +1,38 @@
 {
   "jspm": {
     "directories": {
-      "lib": ".",
-      "packages": "jspm_packages"
+      "app": "src"
     },
+    "configFile": "system.config.js",
     "dependencies": {
-      "angular/angular": "github:angular/angular@2.0.0-alpha.15",
-      "angular/zone.js": "github:angular/zone.js@^0.4.1",
+      "Polymer/paper-elements": "github:Polymer/paper-elements@^0.5.5",
+      "Polymer/polymer": "github:Polymer/polymer@^0.5.5",
+      "angular/angular": "github:angular/angular@master",
+      "angular2": "npm:angular2@2.0.0-alpha.19",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
+    },
+    "devDependencies": {
+      "traceur": "github:jmcriffey/bower-traceur@0.0.87",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.87"
+    },
+    "overrides": {
+      "npm:angular2@2.0.0-alpha.19": {
+        "baseURL": "es6/prod",
+        "paths": {
+          "*": "*.es6"
+        }
+      },
+      "github:angular/angular@master": {
+        "baseURL": "es6/prod",
+        "paths": {
+          "*": "*.es6"
+        }
+      }
     }
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.5.2",
+    "gulp-connect": "^2.2.0",
+    "systemjs-builder": "^0.10.4"
   }
 }
