--- a/package.json
+++ b/package.json
@@ -7,28 +7,14 @@
     "dependencies": {
       "Polymer/paper-elements": "github:Polymer/paper-elements@^0.5.5",
       "Polymer/polymer": "github:Polymer/polymer@^0.5.5",
-      "angular/angular": "github:angular/angular@master",
-      "angular2": "npm:angular2@2.0.0-alpha.19",
+      "angular/angular": "github:angular/angular@^2.0.0-alpha.21",
+      "angular2": "npm:angular2@2.0.0-alpha.21",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5"
     },
     "devDependencies": {
-      "traceur": "github:jmcriffey/bower-traceur@0.0.87",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.87"
+      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
     },
-    "overrides": {
-      "npm:angular2@2.0.0-alpha.19": {
-        "baseURL": "es6/prod",
-        "paths": {
-          "*": "*.es6"
-        }
-      },
-      "github:angular/angular@master": {
-        "baseURL": "es6/prod",
-        "paths": {
-          "*": "*.es6"
-        }
-      }
-    }
   },
   "devDependencies": {
     "gulp-concat": "^2.5.2",
